--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 html {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-*,
-*::before,
-*::after {
-	box-sizing: inherit;
+*, ::after, ::before {
+  box-sizing: inherit;
 }
+
 body {
   background-color: #d8d8d8;
   font-family: "Montserrat", sans-serif;
