--- a/src/Tasks/style.css
+++ b/src/Tasks/style.css
@@ -1,16 +1,20 @@
 .taskList {
   padding: 20px 20px;
-  
+
   list-style: none;
 }
 
-.taskList__item {
+.tasks__item {
   padding: 10px;
   display: grid;
   grid-template-columns: auto 1fr auto;
   gap: 10px;
   align-items: center;
   border-bottom: 2px solid #eee;
+}
+
+.tasks__item--hidden {
+  display: none;
 }
 
 .taskList__done {
